--- a/playground/templates/playground/hello.html
+++ b/playground/templates/playground/hello.html
@@ -10,6 +10,9 @@
     <h1>Hello {{name}}</h1>
     {% else %}
     <h1>Hello World</h1>
-    {% endif %} 
+    {% endif %}
+    {% for s in result %}
+     {{s.title}} 
+     {% endfor %} 
   </body>
 </html>
